src/assets/admin/css/style.scss
/* ... */
// File control
.lzb-gutenberg-file-wrap {
    .lzb-gutenberg-file-item {
        display: flex;
        margin-bottom: 10px;
        border: 1px solid #e2e4e7;
    }
    .lzb-gutenberg-file-item-icon {
        display: flex;
        align-items: center;
        padding: 10px 15px;
        border-right: 1px solid #e2e4e7;
    }
    .lzb-gutenberg-file-item-content {
        display: flex;
        flex-direction: column;
        padding: 10px;
    }
    .lzb-gutenberg-file-item-content-title {
        font-weight: 600;
    }
    .lzb-gutenberg-file-item-content-filename {
        opacity: .5;
    }
}

// Rich Text control
.lzb-gutenberg-rich-text {
    .block-editor-rich-text__inline-toolbar {
        position: relative;
        justify-content: flex-start;
        top: 0;

        .block-editor-format-toolbar,
        .block-editor-format-toolbar > .components-toolbar {
            width: 100%;
        }
        .block-editor-format-toolbar > .components-toolbar {
            border-bottom: 0;
        }
    }
    .block-editor-rich-text__editable,
    .block-editor-rich-text__tinymce {
        padding: 10px 15px;
        background-color: #fff;
        border: 1px solid #e2e4e7;

        p:last-of-type {
            margin-bottom: 0;
        }
    }
}

// Classic Editor control
.lzb-gutenberg-classic-editor {
    .block-library-classic__toolbar {
        display: block;
        margin: 0;

        &:empty {
            display: none;
        }

        div.mce-toolbar-grp {
            border-bottom: none;
        }
    }
    .block-library-rich-text__tinymce {
        padding: 20px;
        border: 1px solid #e2e4e7;
        outline: none;
    }
}

// repeater
.components-base-control__label + .lzb-gutenberg-repeater {
    margin-top: 8px;
}
.lzb-gutenberg-repeater-item {
    position: relative;
    background-color: #fff;
    border-bottom: 1px solid rgba(#888, .25);

    &:last-child {
        border-bottom: none;
    }

    > div {
        margin-right: 15px;
        margin-left: 15px;
    }

    .lzb-gutenberg-repeater-btn {
        position: relative;
        width: 100%;
        padding: 15px;
        padding-left: 25px;
        margin-bottom: -1px;
        text-align: left;
        cursor: pointer;
        background: none;
        border: none;
        outline: none;
    }

    // Button Arrow.
    .lzb-gutenberg-repeater-btn-arrow {
        position: absolute;
        display: block;
        top: 50%;
        right: 0;
        font-size: 1.7em;
        border-radius: 50%;
        transform: translateY(-50%);

        svg {
            display: block;
            width: 1em;
            height: 1em;
            fill: currentColor;
        }
    }
    &:hover .lzb-gutenberg-repeater-btn-arrow {
        background-color: rgba(#888, .1);
    }
    .lzb-gutenberg-repeater-btn-active .lzb-gutenberg-repeater-btn-arrow {
        color: #fff;
        background-color: #1e1e1e;
        transform: translateY(-50%) rotate(180deg);
    }

    // Button Remove.
    .lzb-gutenberg-repeater-btn-remove {
        position: absolute;
        display: block;
        top: 12px;
        right: 30px;
        width: 1.13em;
        height: 1.13em;
        padding: 0;
        font-size: 1.5em;
        cursor: pointer;
        background: none;
        border: none;
        border-radius: 50%;
        opacity: 0;

        > svg {
            display: block;
            width: 1em;
            height: 1em;
            margin: 0 auto;
            fill: currentColor;
        }
    }
    &:hover .lzb-gutenberg-repeater-btn-remove {
        opacity: 1;
    }
    .lzb-gutenberg-repeater-btn-remove:hover,
    .lzb-gutenberg-repeater-btn-remove:focus {
        color: #ea2c22;
    }

    // Button Drag.
    .lzb-gutenberg-repeater-btn-drag {
        position: absolute;
        display: block;
        top: 50%;
        left: 0;
        height: auto;
        padding: 0;
        margin: 0;
        font-size: 1.3em;
        cursor: move;
        opacity: .3;
        transform: translateY(-50%);

        svg {
            display: block;
            width: 1em;
            height: 1em;
            margin-left: -3px;
        }
    }
    &:hover .lzb-gutenberg-repeater-btn-drag {
        opacity: .7;
    }
    .lzb-gutenberg-repeater-btn-drag:hover,
    .lzb-gutenberg-repeater-btn-drag:focus,
    .lzb-gutenberg-repeater-btn-active .lzb-gutenberg-repeater-btn-drag {
        color: inherit;
        opacity: 1;
    }

    // Repeater item content with columns support
    .lzb-gutenberg-repeater-item-content {
        display: flex;
        flex-wrap: wrap;
        padding-bottom: 13px;
        margin: 0;

        .components-notice {
            margin: 0;
            margin-top: 15px;
        }

        > .components-panel__body {
            width: 100%;
            padding-right: 0;
            padding-left: 0;
            border: none;
        }
    }
}
.lzb-gutenberg-repeater-items {
    margin-bottom: 15px;
}
.lzb-gutenberg-repeater-options {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    .components-toggle-control .components-form-toggle {
        margin-right: 0;
    }
}
.lzb-inspector-controls {
    .lzb-gutenberg-repeater {
        padding-right: 0;
        padding-left: 0;
    }
    .lzb-gutenberg-repeater-item {
        padding-top: 0;
        margin-right: 0;
        margin-left: 0;
    }
    .lzb-gutenberg-repeater-item-content > .components-panel__body:first-child {
        margin-top: -15px;
    }
    .components-notice {
        margin: 0;
        margin-top: 15px;
    }
}
/* ... */

